visibility state changing now works correctly with hidden infinite scroller items

--- a/src/static/scripts/components/feed/universalFeed/_universalFeed.scss
+++ b/src/static/scripts/components/feed/universalFeed/_universalFeed.scss
@@ -6,6 +6,7 @@
 	@media (orientation: portrait) {
 		padding: 0 0.4rem 0 2.2rem;
 	}
+	min-height: 70vh;
 	display: flex;
 	flex-flow: column;
 
